fix gradient layout shift (#605)

--- a/components/bl-marquee-component/styles/index.less
+++ b/components/bl-marquee-component/styles/index.less
@@ -1,4 +1,5 @@
 @bl-customComponent-marquee-width: 100%;
+@bl-customComponent-marquee-container-width: 100%;
 @bl-customComponent-marquee-content-width: 100%;
 
 @bl-customComponent-marquee-animation-name: scroll;
@@ -15,42 +16,48 @@
 @bl-customComponent-marquee-overlay-z-index: 2;
 
 .bl-customComponent-marquee {
-  width: @bl-customComponent-marquee-width;
-  display: flex !important;
-  flex-direction: row !important;
-  overflow-x: hidden !important;
+  display: flex;
   position: relative;
+  width: @bl-customComponent-marquee-width;
 
-  &:hover .marquee-content {
-    animation-play-state: var(--marquee-pause-on-hover);
-  }
+  .marquee-container {
+    width: @bl-customComponent-marquee-container-width;
+    display: flex !important;
+    flex-direction: row !important;
+    overflow-x: hidden !important;
+    position: relative;
 
-  &:active .marquee-content {
-    animation-play-state: var(--marquee-pause-on-click);
-  }
+    &:hover .marquee-content {
+      animation-play-state: var(--marquee-pause-on-hover);
+    }
 
-  .marquee-content {
-    flex: 0 0 auto;
-    min-width: @bl-customComponent-marquee-content-width;
-    z-index: 1;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    animation-name: @bl-customComponent-marquee-animation-name;
-    animation-timing-function: @bl-customComponent-marquee-animation-timing-function;
-    animation-play-state: var(--marquee-play);
-    animation-delay: @bl-customComponent-marquee-animation-delay;
-    animation-direction: @bl-customComponent-marquee-animation-direction;
-    animation-duration: @bl-customComponent-marquee-animation-duration;
-    animation-iteration-count: @bl-customComponent-marquee-animation-iteration-count;
+    &:active .marquee-content {
+      animation-play-state: var(--marquee-pause-on-click);
+    }
 
-    @keyframes scroll {
-      0% {
-        transform: translateX(0%);
-      }
-      100% {
-        transform: translateX(-100%);
+    .marquee-content {
+      flex: 0 0 auto;
+      min-width: @bl-customComponent-marquee-content-width;
+      z-index: 1;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-around;
+      animation-name: @bl-customComponent-marquee-animation-name;
+      animation-timing-function: @bl-customComponent-marquee-animation-timing-function;
+      animation-play-state: var(--marquee-play);
+      animation-delay: @bl-customComponent-marquee-animation-delay;
+      animation-direction: @bl-customComponent-marquee-animation-direction;
+      animation-duration: @bl-customComponent-marquee-animation-duration;
+      animation-iteration-count: @bl-customComponent-marquee-animation-iteration-count;
+
+      @keyframes scroll {
+        0% {
+          transform: translateX(0%);
+        }
+        100% {
+          transform: translateX(-100%);
+        }
       }
     }
   }
